Improve queue locking and fix linux unit tests (#6)
* Close Backtrace client

* Add time limit to await for backtrace client

* Add final to variables

* Unlock queue after adding message

* Decrease waiting time in the unit tests

* Add logging

* Fix locks

* Check fix processing

* Add closing lock

* Remove debug logging

* Improve comment

* Reformat code and reorganize imports

* Update library version, README.md and CHANGELOG.md

* Remove logs